// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBarButtonsMenu renders CommandBarButtonsMenu 1`] = `
<StyledTooltipHostBase
  aria-label="More actions"
  content="More actions"
>
  <CustomizedCommandBarButton
    ariaLabel="More actions"
    className="commandBarButtonsMenu"
    componentRef={{}}
    menuIconProps={
      {
        "className": "commandBarButtonsMenuButton",
        "iconName": "More",
      }
    }
    menuProps={
      {
        "className": "commandBarButtonsSubmenu",
        "items": [
          {
            "key": "export report",
            "onRender": [Function],
          },
          {
            "key": "save assessment",
            "onRender": [Function],
          },
          {
            "key": "load assessment",
            "onRender": [Function],
          },
          {
            "key": "transfer to assessment",
            "onRender": [Function],
          },
          {
            "key": "start over",
          },
        ],
      }
    }
    role="button"
  />
</StyledTooltipHostBase>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render export report menuitem 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Report export button
  </React.Fragment>
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render load assessment menuitem 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Load assessment button
  </React.Fragment>
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render save assessment menuitem 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Save assessment button
  </React.Fragment>
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render start over menuitem 1`] = `
<React.Fragment>
  Start over button
</React.Fragment>
`;

exports[`CommandBarButtonsMenu renders all child buttons,: render transfer to assessment menuitem 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Transfer to assessment button
  </React.Fragment>
</div>
`;
